Client Location Fix and Jquery Close

--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -456,16 +456,14 @@
         </div>
 
         <div class="modal-footer">
-          <button class="btn logo-color btn-sm" data-dismiss="modal">
-            Cancel
-          </button>
           <button
             class="btn logo-color btn-sm"
             data-dismiss="modal"
-            (click)="onSave()"
+            id="newProjectCancel"
           >
-            Save
+            Cancel
           </button>
+          <button class="btn logo-color btn-sm" (click)="onSave()">Save</button>
         </div>
       </div>
     </div>
