--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -822,12 +822,12 @@
         </div>
 
         <div class="modal-footer">
-          <button class="btn logo-color btn-sm" data-dismiss="modal">
+          <button class="btn logo-color btn-sm" data-dismiss="modal" id="updateProjetCancel">
             Cancel
           </button>
           <button
             class="btn btn-warning btn-sm"
-            data-dismiss="modal"
+        
             (click)="onUpdate()"
           >
             Update
