--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -49,6 +49,9 @@
       <li class="nav-item" *ngIf="!loginService.isUserLoggedIn()">
         <a class="nav-link" routerLink="/login">Login</a>
       </li>
+      <li class="nav-item" *ngIf="!loginService.isUserLoggedIn()">
+        <a class="nav-link" routerLink="/signup">Signup</a>
+      </li>
     </ul>
     <form class="form-inline my-2 my-lg-0">
       <div class="input-group">
