--- a/src/app/sign-up/sign-up.component.html
+++ b/src/app/sign-up/sign-up.component.html
@@ -1,1 +1,91 @@
-<p>sign-up works!</p>
+<div class="row">
+  <div class="col-md-8 col-xl-6 mx-auto">
+    <div class="card mt-2">
+      <div class="card-header">
+        <h5>Sign Up</h5>
+      </div>
+
+      <div class="card-body">
+        <form>
+          <!-- first name starts here -->
+          <div class="form-group form-row">
+            <label for="firstname" class="col-md-4 col-form-label">
+              First Name:
+            </label>
+            <div class="col-md-8">
+              <input
+                type="text"
+                name="firstName"
+                id="firstName"
+                class="form-control"
+                placeholder="First Name"
+              />
+            </div>
+          </div>
+          <!-- first name ends here -->
+          <!-- lastName starts here -->
+          <div class="form-group form-row">
+            <label for="lastName" class="col-md-4 col-form-label">
+              Last Name:
+            </label>
+            <div class="col-md-8">
+              <input
+                type="text"
+                name="lastName"
+                id="lastName"
+                class="form-control"
+                placeholder="Last Name"
+              />
+            </div>
+          </div>
+          <!-- lastName ends here -->
+          <!-- email starts here -->
+          <div class="form-group form-row">
+            <label for="email" class="col-md-4 col-form-label"> Email: </label>
+            <div class="col-md-8">
+              <input
+                type="text"
+                name="email"
+                id="email"
+                class="form-control"
+                placeholder="Email"
+              />
+            </div>
+          </div>
+          <!-- email ends here -->
+          <!-- mobile starts here -->
+          <div class="form-group form-row">
+            <label for="mobile" class="col-md-4 col-form-label">
+              Mobile:
+            </label>
+            <div class="col-md-8">
+              <input
+                type="text"
+                name="mobile"
+                id="mobile"
+                class="form-control"
+                placeholder="Mobile"
+              />
+            </div>
+          </div>
+          <!-- email ends here -->
+          <!-- dateOfBrith starts here -->
+          <div class="form-group form-row">
+            <label for="dateOfBrith" class="col-md-4 col-form-label">
+              Date Of Brith:
+            </label>
+            <div class="col-md-8">
+              <input
+                type="date"
+                name="dateOfBrith"
+                id="dateOfBrith"
+                class="form-control"
+              />
+            </div>
+          </div>
+          <!-- email ends here -->
+        </form>
+      </div>
+    </div>
+  </div>
+</div>
