TDF: Radio Button

--- a/src/app/sign-up/sign-up.component.html
+++ b/src/app/sign-up/sign-up.component.html
@@ -88,7 +88,36 @@
               />
             </div>
           </div>
-          <!-- email ends here -->
+          <!-- dateOfBirth ends here -->
+          <!-- gender starts here -->
+          <div class="form-group form-row">
+            <label for="gender" class="col-md-4 col-form-label">
+              Gender:
+            </label>
+            <div class="form-check-label form-check-inline">
+              <input
+                type="radio"
+                name="gender"
+                id="male"
+                value="male"
+                class="form-check-input"
+                formControlName="gender"
+              />
+              <label for="male" class="form-check-label">Male</label>
+            </div>
+            <div class="form-check-label form-check-inline">
+              <input
+                type="radio"
+                name="gender"
+                id="female"
+                value="female"
+                class="form-check-input"
+                formControlName="gender"
+              />
+              <label for="female" class="form-check-label">Female</label>
+            </div>
+          </div>
+          <!-- gender ends here -->
         </form>
         {{ signUpForm.value | json }}
       </div>
