--- a/src/app/sign-up/sign-up.component.html
+++ b/src/app/sign-up/sign-up.component.html
@@ -94,27 +94,21 @@
             <label for="gender" class="col-md-4 col-form-label">
               Gender:
             </label>
-            <div class="form-check-label form-check-inline">
+            <div
+              class="form-check-label form-check-inline"
+              *ngFor="let gender of genders"
+            >
               <input
                 type="radio"
                 name="gender"
-                id="male"
-                value="male"
+                [id]="gender"
+                [value]="gender"
                 class="form-check-input"
                 formControlName="gender"
               />
-              <label for="male" class="form-check-label">Male</label>
-            </div>
-            <div class="form-check-label form-check-inline">
-              <input
-                type="radio"
-                name="gender"
-                id="female"
-                value="female"
-                class="form-check-input"
-                formControlName="gender"
-              />
-              <label for="female" class="form-check-label">Female</label>
+              <label [for]="gender" class="form-check-label">
+                {{ gender }}
+              </label>
             </div>
           </div>
           <!-- gender ends here -->
