--- a/src/app/sign-up/sign-up.component.html
+++ b/src/app/sign-up/sign-up.component.html
@@ -112,6 +112,47 @@
             </div>
           </div>
           <!-- gender ends here -->
+          <!-- country starts here -->
+          <div class="form-group form-row">
+            <label for="country" class="col-md-4 col-form-label">
+              Country:
+            </label>
+            <div class="col-md-8">
+              <select
+                name="countryID"
+                id="countryID"
+                class="form-control"
+                formControlName="countryID"
+              >
+                <option value="null">Please Select</option>
+                <option
+                  [value]="country.countryID"
+                  *ngFor="let country of countries"
+                >
+                  {{ country.countryName }}
+                </option>
+              </select>
+            </div>
+          </div>
+          <!-- country ends here -->
+          <!-- newsletter starts here -->
+          <div class="form-group form-row">
+            <label for="newsletter" class="col-md-4 col-form-label"> </label>
+            <div class="col-md-8">
+              <input
+                type="checkbox"
+                name="receiveNewsLetter"
+                id="receiveNewsLetter"
+                value="true"
+                class="form-check-input"
+                formControlName="receiveNewsLetter"
+              />
+              <label for="newsletter" class="form-check-label">
+                Receive News Letter
+              </label>
+            </div>
+          </div>
+          <!-- newsletter ends here -->
         </form>
         {{ signUpForm.value | json }}
       </div>
