RF: setValue, patch Value and reset

--- a/src/app/sign-up/sign-up.component.html
+++ b/src/app/sign-up/sign-up.component.html
@@ -156,6 +156,14 @@
         </form>
         {{ signUpForm.value | json }}
       </div>
+
+      <div class="card-footer">
+        <button
+         class="btn float-right btn-success"
+          (click)="onSubmitClicked()">
+          Create Account
+        </button>
+      </div>
     </div>
   </div>
 </div>
