--- a/src/app/sign-up/sign-up.component.html
+++ b/src/app/sign-up/sign-up.component.html
@@ -8,7 +8,7 @@
       <div class="card-body">
         <form [formGroup]="signUpForm">
           <!-- first name starts here -->
-          <div class="form-group form-row">
+          <div class="form-group form-row" formGroupName="personalDetails">
             <label for="firstname" class="col-md-4 col-form-label">
               First Name:
             </label>
@@ -25,7 +25,7 @@
           </div>
           <!-- first name ends here -->
           <!-- lastName starts here -->
-          <div class="form-group form-row">
+          <div class="form-group form-row" formGroupName="personalDetails">
             <label for="lastName" class="col-md-4 col-form-label">
               Last Name:
             </label>
@@ -158,9 +158,7 @@
       </div>
 
       <div class="card-footer">
-        <button
-         class="btn float-right btn-success"
-          (click)="onSubmitClicked()">
+        <button class="btn float-right btn-success" (click)="onSubmitClicked()">
           Create Account
         </button>
       </div>
