--- a/src/app/sign-up/sign-up.component.html
+++ b/src/app/sign-up/sign-up.component.html
@@ -263,6 +263,42 @@
             </div>
           </div>
           <!-- dateOfBirth ends here -->
+          <!-- Password starts here -->
+          <div class="form-group form-row">
+            <label for="password" class="col-md-4 col-form-label"
+              >Password:</label
+            >
+            <div class="col-md-8">
+              <input
+                type="password"
+                name="password"
+                id="password"
+                placeholder="Password"
+                class="form-control"
+                formControlName="password"
+              />
+            </div>
+          </div>
+          <!-- password ends here -->
+
+          <!-- Confirm Password starts here -->
+          <div class="form-group form-row">
+            <label for="password" class="col-md-4 col-form-label"
+              >Confirm Password:</label
+            >
+            <div class="col-md-8">
+              <input
+                type="password"
+                name="confirmPassword"
+                id="confirmPassword"
+                placeholder="Confirm Password"
+                class="form-control"
+                formControlName="confirmPassword"
+              />
+            </div>
+          </div>
+          <!-- confirmPassword ends here -->
+
           <!-- gender starts here -->
           <div class="form-group form-row">
             <label for="gender" class="col-md-4 col-form-label">
