RF: Cross Field Validation

--- a/src/app/sign-up/sign-up.component.html
+++ b/src/app/sign-up/sign-up.component.html
@@ -276,7 +276,31 @@
                 placeholder="Password"
                 class="form-control"
                 formControlName="password"
+                [ngClass]="{
+                  'is-invalid':
+                    signUpForm.get('password').invalid &&
+                    (signUpForm.get('password').dirty ||
+                      signUpForm.get('password').touched ||
+                      signUpForm.submitted),
+                  'is-valid':
+                    signUpForm.get('password').valid &&
+                    (signUpForm.get('password').dirty ||
+                      signUpForm.get('password').touched ||
+                      signUpForm.submitted)
+                }"
               />
+
+              <span
+                class="text-danger"
+                *ngIf="
+                  signUpForm.get('password').invalid &&
+                  (signUpForm.get('password').dirty ||
+                    signUpForm.get('password').touched ||
+                    signUpForm.submitted) &&
+                  signUpForm.get('password').errors?.required
+                "
+                >Password field cannot be blank</span
+              >
             </div>
           </div>
           <!-- password ends here -->
@@ -294,7 +318,41 @@
                 placeholder="Confirm Password"
                 class="form-control"
                 formControlName="confirmPassword"
+                [ngClass]="{
+                  'is-invalid':
+                    signUpForm.get('confirmPassword').invalid &&
+                    (signUpForm.get('confirmPassword').dirty ||
+                      signUpForm.get('confirmPassword').touched ||
+                      signUpForm.submitted),
+                  'is-valid':
+                    signUpForm.get('confirmPassword').valid &&
+                    (signUpForm.get('confirmPassword').dirty ||
+                      signUpForm.get('confirmPassword').touched ||
+                      signUpForm.submitted)
+                }"
               />
+              <span
+                class="text-danger"
+                *ngIf="
+                  signUpForm.get('confirmPassword').invalid &&
+                  (signUpForm.get('confirmPassword').dirty ||
+                    signUpForm.get('confirmPassword').touched ||
+                    signUpForm.submitted) &&
+                  signUpForm.get('confirmPassword').errors?.required
+                "
+                >Confirm Password field cannot be blank</span
+              >
+              <span
+                class="text-danger"
+                *ngIf="
+                  signUpForm.invalid &&
+                  (signUpForm.dirty ||
+                    signUpForm.touched ||
+                    signUpForm.submitted) &&
+                  signUpForm.errors?.comparePasswordValidator
+                "
+                >Password and Confirm Password doesn't match</span
+              >
             </div>
           </div>
           <!-- confirmPassword ends here -->
