--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -54,53 +54,16 @@
     >
       Create Project
     </button>
-
-    <table class="table">
-      <thead>
-        <th>Project ID</th>
-        <th>Project Name</th>
-        <th>Date of Start</th>
-        <th>Team Size</th>
-        <th>Client Location</th>
-        <th>Status</th>
-        <th>Actions</th>
-      </thead>
-      <tbody>
-        <tr
-          *ngFor="let project of projects; index as i"
-          [ngClass]="{
-            'text-muted': !project.active
-          }"
-        >
-          <td>{{ project.projectID }}</td>
-          <td>{{ project.projectName }}</td>
-          <td>{{ project.dateOfStart }}</td>
-          <td>{{ project.teamSize }}</td>
-          <td>{{ project.clientLocation.clientLocationName }}</td>
-          <td>{{ project.status }}</td>
-          <td>
-            <button
-              class="btn btn-sm btn-warning m-2"
-              data-toggle="modal"
-              data-target="#editProjectModal"
-              (click)="onEditClicked($event, i)"
-            >
-              Edit
-            </button>
-            <button
-              class="btn btn-sm btn-danger m-2"
-              data-toggle="modal"
-              data-target="#deleteProjectModal"
-              (click)="onDeleteClicked(i)"
-            >
-              Delete
-            </button>
-          </td>
-        </tr>
-        <tr></tr>
-      </tbody>
-    </table>
   </div>
+
+  <div class="col-xl-12 mx-auto">
+    <div class="row">
+      <div class="col-md-4" *ngFor="let project of projects; let i = index">
+        <app-project></app-project>
+      </div>
+    </div>
+  </div>
+  
 </div>
 
 <!-- Create Project Modal -->
