--- a/src/app/project/project.component.html
+++ b/src/app/project/project.component.html
@@ -1,1 +1,40 @@
-<p>project works!</p>
+<div class="card card-primary m-2">
+  <div class="card-header">
+    <div>#{{ project.projectID }}</div>
+    <h5>{{ project.projectName }}</h5>
+  </div>
+
+  <div class="card-body">
+    <table class="table table-borderless">
+      <tr>
+        <th>Date of Start</th>
+        <td>{{ project.dateOfStart }}</td>
+      </tr>
+      <tr>
+        <th>Team Size</th>
+        <td>{{ project.teamSize }}</td>
+      </tr>
+      <tr>
+        <th>Client Location</th>
+        <td>{{ project.clientLocation?.clientLocationName }}</td>
+      </tr>
+      <tr>
+        <th>Status</th>
+        <td>{{ project.status }}</td>
+      </tr>
+    </table>
+  </div>
+
+  <div class="card-footer">
+    <button class="btn btn-info" data-toggle="modal" data-target="#editModal">
+      Edit</button
+    >&nbsp;
+    <button
+      class="btn btn-warning"
+      data-toggle="modal"
+      data-target="#deleteModal"
+    >
+      Delete
+    </button>
+  </div>
+</div>
