--- a/src/app/project/project.component.html
+++ b/src/app/project/project.component.html
@@ -26,13 +26,19 @@
   </div>
 
   <div class="card-footer">
-    <button class="btn btn-info" data-toggle="modal" data-target="#editModal">
+    <button
+      class="btn btn-info"
+      data-toggle="modal"
+      data-target="#editProjectModal"
+      (click)="onEditClick($event, index)"
+    >
       Edit</button
     >&nbsp;
     <button
       class="btn btn-warning"
       data-toggle="modal"
-      data-target="#deleteModal"
+      data-target="#deleteProjectModal"
+      (click)="onDeleteClick($event, index)"
     >
       Delete
     </button>
