--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -35,6 +35,11 @@
           >About</a
         >
       </li>
+      <li class="nav-item" *ngIf="loginService.isUserLoggedIn()">
+        <a routerLink="/about" routerLinkActive="link-active" class="nav-link"
+          >Projects [ {{ projectCount }} ]</a
+        >
+      </li>
 
       <li class="nav-item" *ngIf="loginService.isUserLoggedIn()">
         <a class="nav-link">{{ loginService.currentUser }}</a>
